2007-09-02  Oliver Flasch <oliver.flasch@cs.uni-dortmund.de>

	* XmlNamespace.java (make): New static methods.

2007-04-03  Per Bothner  <per@bothner.com>

	* Document.java (parse(Object)): Adjust index for BEGIN_ENTITY_SIZE.
	(parseCached): Use parse(Object) method.

2007-02-26  Per Bothner  <per@bothner.com>

	* MakeUnescapedData.java (inline): Update for new CanInline api.
	* TreeScanner.java (inline): Likewise.

2007-02-16  Per Bothner  <per@bothner.com>

	* XStringType.java: Semi-handle the non-use:regex PreProcess case.

2007-01-20  Per Bothner  <per@bothner.com>

	* KComment.java (valueOf): New factory method.
	* KProcessingInstruction.java (valueOf): New factory method.

	* XmlNamespace.java (getInstance): Intern parameters.
	Add " [xml]" to namespace name to make unique.

	* MakeElement.java (numArgs): Fix for case when tag is non-null.

2007-01-17  Per Bothner  <per@bothner.com>

	* XDataType.java (ANY_ATOMIC_TYPE_CODE): New constant.
	(anyAtomicType): New static.
	(isInstance): Handle ANY_ATOMIC_TYPE_CODE.

	* KNode.java (getNodeSymbol, getNodeNameObject): New methods.
	* NodeName.java: Remove no-longer-used class.
	* Makefile.am: Update accordingly.

2007-01-16  Per Bothner  <per@bothner.com>

	* XDataType.java (stringType): Use java.lang.CharSequence.
	(stringStringType): New type.
	(compare): Consider stringType and stringStringType as equivalent.
	(isInstance): Check for CharSequence.

	* TreeScanner.java (getDesc): New helper method.
	(apply): Map ClassCastException to more friendly WrongType.

2007-01-14  Per Bothner  <per@bothner.com>

	* XStringType.java: New class, extends XDataType.
	* XString.java: New class, implements CharSequence.
	* Makefile.am: Update accordingly.
	* XDataType.java (NORMALIZED_STRING_TYPE_CODE, TOKEN_TYPE_CODE,
	LANGUAGE_TYPE_CODE, NMTOKEN_TYPE_CODE, NAME_TYPE_CODE, NCNAME_TYPE_CODE,
	ID_TYPE_CODE, IDREF_TYPE_CODE, ENTITY_TYPE_CODE): New constants.

	* XIntegerType.java (isUnsignedType, isUnsignedType): New field, method.