@@ -1,3 +1,7 @@
+2007-11-04  Per Bothner  <per@bothner.com>
+
+	* XmlNamespace.java: Add missing support for pre-JAVA5.
+
 2007-09-02  Oliver Flasch <oliver.flasch@cs.uni-dortmund.de>
 
 	* XmlNamespace.java (make): New static methods.
